# fastapi-ddd-cookiecutter

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_slug}}/app/: main.py
{{cookiecutter.project_slug}}/app/apis/: config.py  containers.py  repositories.py  routers.py
{{cookiecutter.project_slug}}/app/apis/{{cookiecutter.first_entity}}/: container.py  models.py  routers.py  schemas.py  service.py
{{cookiecutter.project_slug}}/app/core/: db.py  db_repositories.py  model_factory.py
{{cookiecutter.project_slug}}/scripts/: clean.sh  install.sh  lint.sh  run_app.sh  setup_dev.sh  test.sh  venv.sh
{{cookiecutter.project_slug}}/tests/unit/: conftest.py  test_repositories.py
{{cookiecutter.project_slug}}/tests/unit/endpoints/: test_{{cookiecutter.first_entity}}.py
